# now_leet_code_practice

./: 14_Intersection of Two Arrays.cpp  14_Move Zeroes.cpp  CMakeLists.txt  README.md  c++.md  linkedlist.py  meituan.py  misc.py  test.py
Company test/: 360.py  alibaba.py  baidu.py  baixin.py  dianxin.py  duxiaoman.py  huawei.py  ishumei.py  meituan.py  nvidia.py  pdd.py  sogou.py  xiaomi.py  yuncong.py  zhaoyinxinyongka.py  zuoyebang.py
Dynamic_program/: 10_2_ugly_number_II.cpp  10_3_unique_binary_search_trees.cpp  10_4_Unique Binary Search Trees II.cpp  10_maximal_square.py  11_1_pascal_triangle.cpp  11_2_pascal_triangle_II.cpp  11_kth_largest_element_in_array.py  12_1_minimum_falling_path_sum.cpp  12_2_Triangle.cpp  12_perfect_squares.py  13_1_matrix block sum.cpp  13_2_range sum query mutable.cpp  13_longest_increasing_subsequence.py  14_best_time_to_buy_and_sell_stock_cooldown.py  14_range_sum_query_2d_immutable.md  14_range_sum_query_2d_immutable.py  15_coin_change.py  16_counting_bits.py  17_integer_break.py  18_count_numbers_with_unique_digits.py  19_largest_divisible_subset.py  20_combination_sum_IV.py  20_guess_number_higher_or_lower_II.py  21_wiggle_subsequence.py  22_partition_equal_subset_sum.py  23_can_I_win.py  24_unique_substrings_in_wraparound_string.py  25_ones_and_zeros.py  27_target_sum.py  28_longest_palindromic_subsequence.py  29_continuous_subarray_sum.py  30_out_of_boundary_paths.md  30_out_of_boundary_paths.py  31_shopping_offers.py  32_maximum_length_of_pair_chain.py  33_palindromic_substring.py  34_2_keys_Keyboard.py  35_number_of_longest_increasing_subsequence.py  36_knigh_probability_in_chessboard.md  36_knight_probability_in_chessboard.py  (+52 more)
array/:  17_Third Maximum Number.cpp  10_Contains Duplicate.cpp  11_Contains Duplicate II.cpp  12_Summary ranges.cpp  13_Missing Number.cpp  15_Intersection of Two Arrays.cpp  16_Intersection of Two Arrays II.cpp  18_Find All Numbers Disappeared in an Array.cpp  19_Minimum Moves to Equal Array Elements.cpp  1_Plus One.cpp  20_Assign cookies.cpp  21_Container With Most Water.cpp  22_3sum.cpp  23_3sum closest.cpp  24_4sum.cpp  25_longest_substring_without_repeating_characters.cpp  25_subarray_sum_equals_k.cpp  2_Merge sorted array.cpp  3_pascal triangle.cpp  3_pascal triangle.md  4_Pascal triangleII.cpp  5_Best time to buy and sell stock II.cpp  6_single number.cpp  7_Two sum II.cpp  8_Majority Element.cpp  9_Count Primes.cpp
backtrack/: backtrack.md  m_Combination sum.cpp  m_combination sum II.cpp  m_palindrome partitioning.cpp  m_permutations.cpp  m_permutations_II.cpp  m_subsets.cpp  m_subsets_II.cpp  n-queens.cpp  word_search.cpp
binary_search/: h_binary_tree_maximum_path_sum.cpp  m_Find First and Last Position of Element in Sorted Array.cpp  m_search 2D matrix.cpp  search_in_rotated_sorted_array.cpp  search_insert_position.cpp
fucking_algorithm/: binary_heap.cpp  binary_search.cpp  bit_operation.cpp  bst.cpp  cakesort.java  calculator.cpp  double_pointer.cpp  floodfill.java  intersection_intervals.py  maxEnvelop.java  merge_interval.py  monotonic_queue.cpp  presum.java  reverse_linked_list.cpp  shuffle.java  sliding_window.cpp  stack.cpp  strmultiply.java  subset.cpp  test.cpp  twosum.java
linkded_list/: 10_Middle of the Linked List.cpp  11_Convert Binary Number in a Linked List to Integer.cpp  13_Swap Nodes in Pairs.cpp  链表.md  (+22 more)
(+93 files in other folders)
