cmake_minimum_required(VERSION 3.19)
project(now_leet_code_practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(now_leet_code_practice
        #        linkded_list/singly_linked_list.cpp
        #        linkded_list/doubly_linked_list.cpp
        #        linkded_list/circular_linked_lsit.cpp linkded_list/merge_two_list.cpp "linkded_list/4_Intersection of Two Linked Lists.cpp" "linkded_list/5_Remove Linked List Elements.cpp" "linkded_list/6_Reverse Linked List.cpp" "linkded_list/7_Palindrome Linked List.cpp" "linkded_list/8_Delete Node in a Linked List.cpp" "linkded_list/9_Design HashSet.cpp" "linkded_list/10_Middle of the Linked List.cpp" "linkded_list/11_Convert Binary Number in a Linked List to Integer.cpp" "linkded_list/12_Remove Nth Node From End of List.cpp" "linkded_list/13_Swap Nodes in Pairs.cpp" "linkded_list/14_Rotate list.cpp" "linkded_list/15_Remove Duplicates from Sorted List II.cpp"
#        linkded_list/simple_list.cpp "tree/1_Path sum II.cpp" "array/1_Plus One.cpp" "array/2_Merge sorted array.cpp"
#        "array/3_pascal triangle.cpp" "array/4_Pascal triangleII.cpp" "array/5_Best time to buy and sell stock II.cpp"
#        "array/6_single number.cpp" "array/7_Two sum II.cpp" "array/8_Majority Element.cpp" "array/9_Count Primes.cpp" "array/10_Contains Duplicate.cpp" "array/11_Contains Duplicate II.cpp" "array/12_Summary ranges.cpp" "array/13_Missing Number.cpp"
#        "array/14_Move Zeroes.cpp" "array/15_Intersection of Two Arrays.cpp" "array/16_Intersection of Two Arrays II.cpp"
#        "array/ 17_Third Maximum Number.cpp"
#        "array/18_Find All Numbers Disappeared in an Array.cpp" "array/19_Minimum Moves to Equal Array Elements.cpp"
#        "array/20_Assign cookies.cpp" "array/21_Container With Most Water.cpp" array/22_3sum.cpp "array/23_3sum closest.cpp"
#        array/24_4sum.cpp string/1_longest_common_prefix.cpp string/2_length_of_last_word.cpp string/3_add_binary.cpp
#        string/4_valid_palindrome.cpp
#        string/5_excel_sheet_column_title.cpp "string/6_Excel Sheet Column Number.cpp" string/7_isomorphic_strings.cpp string/8_valid_Anagram.cpp string/9_word_pattern.cpp string/10_reverse_string.cpp string/11_reverse_vowels_of_a_string.cpp
#        string/12_random_note.cpp string/13_first_unique_character_in_string.cpp string/14_find_the_difference.cpp
#        string/15_longest_palindrome.cpp string/16_Fizz_Buzz.cpp string/17_add_string.cpp string/18_number_of_segments_in_string.cpp
#        string/19_repeated_substring_pattern.cpp
        string/20_keyboard_row.cpp)

target_link_libraries(now_leet_code_practice)